--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <title>PedroDiasDojo</title>
+  <title>Pedro Dias Dojô</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="icon" href="assets/img/logo-nobg.jpg" type="image/x-icon">
 </head>
 <body>
   <app-root></app-root>
